--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,20 @@
 			<version>1.7.25</version>
 		</dependency>
 	</dependencies>
-
+<distributionManagement>
+<repository>
+<id>package</id>
+<url>
+http://15.206.122.127:8081/repository/package/
+</url>
+</repository>
+<snapshotRepository>	
+<id>snapshots</id>
+<url>
+http://15.206.122.127:8081/repository/snapshot/
+</url>
+</snapshotRepository>
+</distributionManagement>
 	<build>
 		<plugins>
 			<plugin>
